--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
     "type": "postgres",
     "host": "localhost",
-    "port": 5433,
-    "username": "postgres",
-    "password": "docker",
+    "port": 5432,
+    "username": "jonathandeskmint",
+    "password": "jr292649",
     "database": "hackaton_cpfl",
     "entities": [
         "./src/models/*.ts"
